--- a/devops.html
+++ b/devops.html
@@ -108,7 +108,7 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.militaryhire.com/jobs-for-veterans/job/2053044/Systems-Engineer-DevOps-Level-III/state/Maryland/city/Annapolis-Junction/'>Systems Engineer, DevOps, Level III in Annapolis Junction, Maryland Jobs for Veterans | Military Hire</a></h5> 
+<h5><a href='https://www.militaryhire.com/jobs-for-veterans/job/2053044/Systems-Engineer-DevOps-Level-III/state/Maryland/city/Annapolis-Junction/'>Systems Engineer, DevOps, Level III in Annapolis Junction, Maryland Jobs for Veterans | Military Hire</a></h5> 
 <p><span class="badge badge-light">Annapolis Junction, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -140,7 +140,7 @@
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698582514-devops-engineer-ii'>Verisk DevOps Engineer II | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Verisk/743999698582514-devops-engineer-ii'>Verisk DevOps Engineer II | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -160,7 +160,7 @@
 <p><span class="badge badge-light">Barcelona, Spain  Barcelona</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Linkbynet/743999698570996-data-essential-devops-consultant'>Linkbynet Data Essential | DevOps Consultant | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Linkbynet/743999698570996-data-essential-devops-consultant'>Linkbynet Data Essential | DevOps Consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Luxembourg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -186,7 +186,7 @@
 <p><span class="badge badge-light">Reykjav?k, Iceland Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/InfotreeServiceInc2/743999698559111-devops-engineer'>Infotree Service Inc DevOps Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfotreeServiceInc2/743999698559111-devops-engineer'>Infotree Service Inc DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -194,7 +194,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://so1.join.com/jobs/467426-senior-devops-engineer-m-f-x-onsite-remote'>Job @ SO1 (Remote): Senior DevOps Engineer (m/f/x)... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://so1.join.com/jobs/467426-senior-devops-engineer-m-f-x-onsite-remote'>Job @ SO1 (Remote): Senior DevOps Engineer (m/f/x)... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -202,11 +202,11 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/labelbox/e86d9dfe-2e63-459c-93a2-f92412441d60'>Labelbox - DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/labelbox/e86d9dfe-2e63-459c-93a2-f92412441d60'>Labelbox - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://netimpactstrategies.applytojob.com/apply/RI8DOAd2oT/DevOps-Engineer'>DevOps Engineer - NetImpact Strategies - Career Page</a></h5> 
+<h5><a href='http://netimpactstrategies.applytojob.com/apply/RI8DOAd2oT/DevOps-Engineer'>DevOps Engineer - NetImpact Strategies - Career Page</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -258,7 +258,7 @@
 <p><span class="badge badge-light">Ottawa, ON, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/datatrontechnologies/jobs/4497193002'>Job Application for DevOps and Systems Engineer at Datatron Technologies</a></h5> 
+<h5><a href='https://boards.greenhouse.io/datatrontechnologies/jobs/4497193002'>Job Application for DevOps and Systems Engineer at Datatron Technologies</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -358,7 +358,7 @@ internal IT operations. You will be completing tasks in support of our IT functi
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698462881-cloud-devops-engineer-aws-devops-engineer'>Version 1 Cloud DevOps Engineer / AWS DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -459,7 +459,7 @@ agile service team focused on daily production service delivery and application?
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
+<h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
