--- a/software.html
+++ b/software.html
@@ -39,6 +39,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-software-developer-14094'>Senior Software Developer - Experian Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=ocdSafwb&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nSblqMw5'>MORI Associates, Inc. Careers - Embedded Real-Time Software Engineer - NASA - autonomous air vehicles</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oKJpafwM&__jvst=Employee+Referral&__jvsd=sSaLPhwo&__jvsc=Twitter&bid=nsBkqMw4'>NICE Careers - Sr.Full Stack Developer / Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -91,7 +99,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ooqibfw1&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nfwhqMwJ'>NICE inContact Careers - Software Engineer I</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ooqibfw1&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nfwhqMwJ'>NICE inContact Careers - Software Engineer I</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, UT</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -157,7 +165,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://optelgroup.applytojob.com/apply/goNPOC0bpG/Senior-Software-Engineer-Architect'>Senior Software Engineer - Architect - Optel Group - Career Page</a></h5> 
+<h5><a href='http://optelgroup.applytojob.com/apply/goNPOC0bpG/Senior-Software-Engineer-Architect'>Senior Software Engineer - Architect - Optel Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -173,7 +181,7 @@
 <p><span class="badge badge-light">Berkeley</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/relativity/6412e7c7-ac1b-4fdc-a8f5-9b375cc794ba'>Relativity - Software Engineer Intern - Trace (Fall/Winter 2019)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/relativity/6412e7c7-ac1b-4fdc-a8f5-9b375cc794ba'>Relativity - Software Engineer Intern - Trace (Fall/Winter 2019)</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -189,7 +197,7 @@
 <p><span class="badge badge-light">Sunnyvale California</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/drchrono/fd5eaa49-9dab-4ba3-b711-cb6db5043053'>DrChrono - Senior Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/drchrono/fd5eaa49-9dab-4ba3-b711-cb6db5043053'>DrChrono - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Hunt Valley, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -239,7 +247,7 @@
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofpibfwR&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nkLaqMwW'>NICE inContact Careers - Software Engineer II - UI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=ofpibfwR&__jvst=Employee+Referral&__jvsd=sB4xJgwG&__jvsc=Twitter&bid=nkLaqMwW'>NICE inContact Careers - Software Engineer II - UI</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah  Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -434,14 +442,6 @@
 <h5><a href='https://boards.greenhouse.io/postmates/jobs/1486667?gh_src=843d815d1'>Job Application for Software Engineer, Backend at Postmates</a></h5> 
 <p><span class="badge badge-light">San Francisco Los Angeles</span></p>
 <p>Posted on:: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Broadridge/743999698597135-software-engineer-java-jr1008843-'>Broadridge Software Engineer (Java) (JR1008843) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Kansas City, MO</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Nextech1/743999698596913-software-engineer-iii-nextech-select'>Nextech Software Engineer III -  Nextech Select | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Tampa, FL Tampa, FL</span></p>
-<p>Posted on: 2019-10-31</p>
 <hr/>
 
 
